# rustforweb.github.io

./: .pre-commit-config.yaml  CNAME  Cargo.toml  LICENSE  README.md  deny.toml  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  website.yml
src/: app.rs  components.rs  main.rs
src/components/: link_button.rs  project_card.rs
src/routes/: index.rs
